Theme functionality update for background theme

--- a/lib/src/main/res/color/com_auth0_lock_text.xml
+++ b/lib/src/main/res/color/com_auth0_lock_text.xml
@@ -24,5 +24,5 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@color/com_auth0_lock_disabled_text" android:state_enabled="false" />
-    <item android:color="@color/com_auth0_lock_normal_text" />
+    <item android:color="@android:color/white" />
 </selector>
