--- a/lib/src/main/res/drawable/com_auth0_lock_tab.xml
+++ b/lib/src/main/res/drawable/com_auth0_lock_tab.xml
@@ -23,6 +23,7 @@
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/com_auth0_lock_tab_focused" android:state_focused="true"/>
+    <item android:drawable="@color/com_auth0_lock_tab_focused"
+        android:state_focused="true"/>
     <item android:drawable="@android:color/transparent" />
 </selector>
