Button color updated

--- a/lib/src/main/res/layout/com_auth0_lock_action_button.xml
+++ b/lib/src/main/res/layout/com_auth0_lock_action_button.xml
@@ -22,7 +22,9 @@
   ~ THE SOFTWARE.
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    android:id="@+id/btn_main_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/Lock.Theme.Widget.SubmitButton">
 
