updated drawable of button

--- a/lib/src/main/res/layout/com_auth0_lock_passwordless_activity_country_code.xml
+++ b/lib/src/main/res/layout/com_auth0_lock_passwordless_activity_country_code.xml
@@ -32,6 +32,7 @@
     <EditText
         android:id="@+id/com_auth0_lock_passwordless_sms_search_country"
         style="@style/Lock.Theme.Widget.Field.Search"
+        android:textColor="@android:color/black"
         tools:ignore="Autofill,LabelFor" />
 
     <ListView
