--- a/lib/src/main/res/layout/com_auth0_lock_validated_input_view.xml
+++ b/lib/src/main/res/layout/com_auth0_lock_validated_input_view.xml
@@ -43,6 +43,7 @@
         <EditText
             android:id="@+id/com_auth0_lock_input"
             style="@style/Lock.Theme.Widget.Field"
+            android:textColor="@android:color/black"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:background="@null"
