--- a/lib/src/main/res/layout/com_auth0_lock_action_button.xml
+++ b/lib/src/main/res/layout/com_auth0_lock_action_button.xml
@@ -31,7 +31,7 @@
     <ImageView
         android:id="@+id/com_auth0_lock_icon"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:paddingBottom="@dimen/com_auth0_lock_action_button_vertical_margin"
         android:paddingTop="@dimen/com_auth0_lock_action_button_vertical_margin"
@@ -41,11 +41,9 @@
     <LinearLayout
         android:id="@+id/com_auth0_lock_labeled"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:gravity="center"
-        android:paddingBottom="@dimen/com_auth0_lock_action_button_labeled_vertical_margin"
-        android:paddingTop="@dimen/com_auth0_lock_action_button_labeled_vertical_margin">
+        android:gravity="center">
 
         <TextView
             android:id="@+id/com_auth0_lock_title"
